# bayes-ball-public

./: .gitignore  README.md  config.py  credentials_example.py  ingestion.py  preprocess.py  pyproject.toml
.github/workflows/: sync-public.yml
config/: config.json
ingestion/: fixture_ingestion.py  fixture_statistics_ingestion.py  injuries_ingestion.py  main.py  statistics_ingestion.py
ingestion/sportmonks/: coaches_ingestion.py  fixtures_ingestion.py  league_codes_ingestion.py  players_ingestion.py  type_codes_ingestion.py
legacy/: ingestion.py  preprocess.py
notebooks/: 0_bayesian_nn_example_usage.ipynb  1_seasons_leagues_test.ipynb  2_bookies_odds_analysis.ipynb  2_bookies_odds_evaluation.ipynb  CY_01_apisports_exploration.ipynb  CY_02_model_evaluation.ipynb  data_needs.ipynb  split_data.ipynb
scripts/: run_experiment.sh
scripts/experimentation/: experiment.py  run_experiment.py  run_experiment.sh
scripts/ingestion/: ingest_fduk.py  run_ingest_fduk.sh
scripts/ingestion/sportmonks/: coaches_ingestion.py  fixtures_ingestion.py  league_codes_ingestion.py  players_ingestion.py  type_codes_ingestion.py
scripts/mlflow_server/: mlflow_server_setup.sh
src/: bayesian_nn.py  experiment.py  experimentation.py  helper_functions.py  ingestion.py  preprocess.py  priors_posteriors.py
src/ingestion/sportmonks/: coaches_ingestion.py  config.py  fixtures_ingestion.py  league_codes_ingestion.py  players_ingestion.py  type_codes_ingestion.py
